Figured out what was breaking the transition when closing the hamburger menu using min-height, instead of height. I need to fix somehow this overflow

--- a/src/components/Navigation.module.css
+++ b/src/components/Navigation.module.css
@@ -4,9 +4,9 @@
   align-items: center;
   padding: 1em;
   position: sticky;
+  top: 0%;
+  z-index: 1;
   outline: 2px solid black;
-  top: 0px;
-  z-index: 10;
 }
 
 .openHamburgerMenu,
@@ -105,18 +105,15 @@
   }
 
   .hamburgerMobileMenuHidden {
+    z-index: 1;
+    width: 30rem;
     display: flex;
     flex-direction: column;
-    outline: 2px solid black;
-    background-color: red;
+    background-color: #40c9a2;
     align-items: center;
     justify-content: center;
     position: absolute;
-    right: 2.5%;
-    z-index: 10;
-    width: 30rem;
-    max-width: 50%;
-    min-width: 50%;
+    right: 0%;
     opacity: 0;
     visibility: hidden;
     height: 0%;
@@ -128,22 +125,19 @@
   }
 
   .hamburgerMobileMenuShow {
+    z-index: 1;
+    width: 30rem;
     display: flex;
     flex-direction: column;
-    outline: 2px solid black;
-    background-color: red;
+    background-color: #40c9a2;
     align-items: center;
-    gap: 2em;
+    justify-content: center;
     position: absolute;
-    right: 2.5%;
-    z-index: 10;
-    width: 30rem;
-    max-width: 50%;
-    min-width: 50%;
+    top: 70%;
+    right: 0%;
     opacity: 1;
     visibility: visible;
     height: 100vh;
-    margin-top: 2.5rem;
   }
 
   .hamburgerMobileMenuShow a {
