--- a/src/components/TypewriterAnimation.module.css
+++ b/src/components/TypewriterAnimation.module.css
@@ -7,6 +7,7 @@
   align-items: center;
   justify-content: center;
   min-height: 100vh;
+  stroke-width: none;
 }
 
 .spanTypeWriterContainer > span {
